# Stately

./: .gitignore  README.md  azure-pipelines-build.yml  azure-pipelines-deploy.yml  build.gradle  build.gradle.kts  build.gradle.old  gradle.properties  runtest.sh  settings.gradle  settings.gradle.kts
Sample/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
azure/: build-pipeline.yml  deploy-pipeline.yml
cpp/: .gitignore  CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
cpp/bcdist/ios_arm32/: tlruntime.bc
cpp/bcdist/ios_arm32/tlruntime/: StatelyCollections.bc
cpp/bcdist/ios_arm64/: tlruntime.bc
cpp/bcdist/ios_arm64/tlruntime/: StatelyCollections.bc
cpp/bcdist/ios_x64/: tlruntime.bc
cpp/bcdist/ios_x64/tlruntime/: StatelyCollections.bc
cpp/bcdist/macos_x64/: tlruntime.bc
cpp/bcdist/macos_x64/tlruntime/: StatelyCollections.bc
cpp/buildSrc/plugins/: build.gradle
cpp/buildSrc/plugins/src/main/groovy/org/jetbrains/kotlin/: DistroFunctions.groovy
cpp/buildSrc/plugins/src/main/kotlin/org/jetbrains/kotlin/: DistroHelper.kt
cpp/code/: build.gradle
cpp/code/src/main/cpp/: KonanHelper.cpp  KonanHelper.h  SQLiteCommon.cpp  SQLiteCommon.h  SQLiteConnection.cpp  StatelyCollections.cpp
deprecated/: README.md
gradle/: configbintray.gradle  configpublish.gradle  gradle-mvn-mpp-push.gradle  libs.versions.toml
memtest/: README.md  build.gradle
stately-collections/: build.gradle
stately-common/: build.gradle
stately-concurrency/: build.gradle  build.gradle.kts
stately-concurrent-collections/: build.gradle.kts  (+1 more)
(+420 files in other folders)
